<resources>
    <string name="app_name">budgetapp</string>
    <string name="budgetapp_title">BUDGETAPP</string>

    <string name="nav_about_programmer">О разработчике</string>
    <string name="nav_feedback">Обратная связь</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="navigation_drawer_open">Панель управления открыта</string>
    <string name="navigation_drawer_close">Панель управления закрыта</string>

    <string name="currency">руб.</string>

    <string name="save_entity">Сохранить</string>
    <string name="edit_entity">Изменить</string>
    <string name="delete_entity">Удалить</string>

    <!--DeleteEntityFragment values-->
    <string name="delete_hint">Удалить эту запись?</string>
    <string name="cancel_btn">Отмена</string>
    <string name="delete_btn">Удалить</string>

    <string name="date_hint">01.01.2019</string>


    <!--Fragments titles-->
    <string name="transactions_fragment">Транзакции</string>
    <string name="transaction_fragment">Транзакция</string>
    <string name="add_transaction_fragment">Добавить транзакцию</string>
    <string name="projects_fragment">Проекты</string>
    <string name="project_fragment">Проект</string>
    <string name="add_project_fragment">Добавить проект</string>
    <string name="categories_fragment">Категории</string>
    <string name="category_fragment">Категория</string>
    <string name="add_category_fragment">Добавить категорию</string>
    <string name="units_fragment">Единицы измерения</string>
    <string name="unit_fragment">Единица измерения</string>
    <string name="add_unit_fragment">Добавить ед. измерения</string>

    <string name="project_element_fragment">Добавить элемент</string>


    <!--Transaction values-->
    <string name="transaction_type">Вид: </string>
    <string-array name="transaction_type_values">
        <item>Расходы</item>
        <item>Доходы</item>
    </string-array>
    <string name="transaction_project">Проект: </string>
    <string name="transaction_category">Категория: </string>
    <string name="transaction_amount">Сумма: </string>
    <string name="transaction_date">Дата: </string>

    <string name="transaction_number_hint">0</string>
    <string name="transaction_add_button">Добавить</string>


    <!--Project values-->
    <string name="project_type">Вид: </string>
    <string-array name="project_type_values">
        <item>Расходы</item>
        <item>Доходы</item>
    </string-array>
    <string name="project_name">Имя:</string>
    <string name="project_duration_type">Тип:</string>
    <string-array name="project_duration_values">
        <item>Постоянный</item>
        <item>Переменный</item>
    </string-array>
    <string name="project_period">Период: </string>
    <string-array name="project_period_values">
        <item>Год</item>
        <item>Месяц</item>
        <item>Неделя</item>
        <item>День</item>
        <item>Дата</item>
        <item>Период</item>
    </string-array>
    <string name="project_start_date">Дата начала: </string>
    <string name="project_finish_date">Дата завершения: </string>

    <string name="project_name_hint">Наименование</string>
    <string name="project_date_hint">01.01.2019</string>
    <string name="project_add_button">Добавить</string>
    <string name="project_update_button">Изменить</string>




    <!--ProjectElement values-->
    <string name="project_element_name">Имя:</string>
    <string name="project_element_category">Категория:</string>
    <string name="project_element_unit">Единица измерения:</string>
    <string name="project_element_quantity">Количество:</string>
    <string name="project_element_amount">Цена:</string>
    <string name="project_element_monitoring">Отслеживать:</string>
    <string name="project_element_minimum">Минимальный остаток:</string>

    <string name="project_element_name_hint">Наименование</string>
    <string name="project_element_number_hint">0</string>
    <string name="project_element_add_button">Добавить</string>


    <!--Category values-->
    <string name="category_name">Имя:</string>

    <string name="category_name_hint">Наименование</string>
    <string name="category_add_button">Добавить</string>

    <string name="familybudget">Бюджет</string>

</resources>
