<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/transactions_fragment"
            android:icon="@drawable/ic_menu_list"
            android:title="@string/transactions_fragment" />
        <item
            android:id="@+id/projects_fragment"
            android:icon="@drawable/ic_project"
            android:title="@string/projects_fragment" />
        <item
            android:id="@+id/categories_fragment"
            android:icon="@drawable/ic_menu_categories"
            android:title="@string/categories_fragment" />
        <item
            android:id="@+id/units_fragment"
            android:icon="@drawable/ic_menu_unit"
            android:title="@string/units_fragment" />

    </group>
</menu>